<resources>
    <string name="app_name">9号仓</string>
    <string name="empty_string"></string>
    <string name="home">首页</string>
    <string name="delete">删除</string>
    <string name="accountHint">手机号/邮箱/账号</string>
    <string name="canel">取消</string>
    <string name="list_footer_network_error">点击重新加载</string>
    <string name="list_footer_loading">正在加载中…</string>
    <string name="list_footer_end">已经到底了</string>
    <string name="experience">立即体验</string>
    <string name="want">想要</string>
    <string name="login">登录</string>
    <string name="password_login">密码登录</string>
    <string name="fast_login">快速登录</string>
    <string name="fast_login_tip">温馨提示</string>
    <string name="fast_login_tip_info">第一次登录9号仓的手机号,登录时自动注册成为9号仓的会员;</string>
    <string name="loginout">登出</string>
    <string name="passwd">密码</string>
    <string name="oldPwd">老密码</string>
    <string name="newPwd">新密码</string>
    <string name="passwdAgain">确认密码</string>
    <string name="forgetPasswd">忘记密码?</string>
    <string name="use_pwd_login">使用密码登录</string>
    <string name="forgetPwd">忘记密码</string>
    <string name="otherLogin">第三方登录方式</string>
    <string name="register">注册</string>
    <string name="microblog">微博</string>
    <string name="wechat">微信</string>
    <string name="qq">QQ</string>
    <string name="phone">手机号</string>
    <string name="code">验证码</string>
    <string name="bind">绑定</string>
    <string name="bind_account">绑定账号</string>
    <string name="getCode">获取验证码</string>
    <string name="bindPhone">绑定手机号</string>
    <string name="skip">跳过</string>
    <string name="nickname">昵称</string>
    <string name="email">邮箱</string>
    <string name="addComment">添加评论</string>
    <string name="protocol">用户协议</string>
    <string name="loadEnd">加载完毕</string>
    <string name="loading">加载中...</string>
    <string name="netword_error">网络连接失败</string>
    <string name="data_empty">暂无数据</string>
    <string name="my">我</string>
    <string name="message">信息</string>
    <string name="jump_next">跳过</string>
    <string name="Null"></string>
    <string name="data_null">暂无数据</string>
    <string name="tip_info_load">轻触重新加载</string>
    <string name="my_tag">我的标签</string>
    <string name="my_content">我的帖子</string>
    <string name="my_favorite">我的收藏夹</string>
    <string name="my_sticker">我的贴纸</string>
    <string name="setting">设置</string>
    <string name="user_info">编辑资料</string>
    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="about">关于我们</string>
    <string name="set_pwd">设置密码</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="comment">评论</string>
    <string name="system">系统信息</string>
    <string name="chang_phone">更换手机号码</string>
    <string name="update">修改</string>
    <string name="update_pwd">修改密码</string>
    <string name="clear_cache">清除缓存</string>
    <string name="icon">头像</string>
    <string name="gender">性别</string>
    <string name="area">地区</string>
    <string name="details">详情</string>
    <string name="content">帖子</string>
    <string name="parise">点赞</string>
    <string name="send">发送</string>
    <string name="post_comment">发帖</string>
    <string name="userCenter">会员中心</string>
    <string name="activity">专题活动</string>
    <string name="telphone">4000126962</string>
    <string name="customer_phone">4000126962</string>
    <string name="kefu_qq">36234291</string>

    <string name="bind_tip">你可以使用任意已绑定的账号来登录</string>

    <!-- error string -->
    <string name="view_type_error">视图类型错误</string>

    <!--       shop         -->
    <string name="shopping">商城</string>
    <string name="addCart">加入购物车</string>
    <string name="statement">结算</string>
    <string name="pay">支付</string>
    <string name="payTrue">确认支付</string>
    <string name="order_detail">订单详情</string>
    <string name="shopCart">购物车</string>
    <string name="address_manager">收货地址管理</string>
    <string name="my_orders">我的订单</string>
    <string name="add_address">+添加新地址</string>
    <string name="add">新增</string>
    <string name="takeName">收货人真实姓名</string>
    <string name="takeNameMobile">收货人联系方式</string>
    <string name="dateil_address">详细收货地址</string>
    <string name="idcard">身份证号</string>
    <string name="cancel_order">取消订单</string>
    <string name="apply_refund">申请退款</string>
    <string name="apply_return">申请退货</string>
    <string name="confirm_receipt">确认收货</string>
    <string name="apply_after_sales">申请售后</string>
    <string name="cancel_after_sales">取消售后</string>
    <string name="call_cutomer">联系客服</string>
    <string name="already_close">已关闭</string>
    <string name="payment">待付款</string>
    <string name="deliver_goods">待发货</string>
    <string name="out_goods">已发货</string>
    <string name="finish">已完成</string>
    <string name="buy_now">立即购买</string>
    <string name="create_order">立即下单</string>
    <string name="free_shipping">免邮</string>
    <string name="save_success">保存成功</string>
    <string name="update_success">修改成功</string>
    <string name="set_default_address">设为默认</string>
    <string name="default_address">默认地址</string>
    <string name="new_address">新增收货地址</string>
    <string name="edit_address">编辑收货地址</string>
    <string name="order_count_text">共%1$s件商品  合计:%2$s (含运费:%3$s)</string>
    <string name="favorite">收藏</string>

    <string name="errcode_success">成功</string>
    <string name="errcode_cancel">失败</string>
    <string name="errcode_deny">被拒绝</string>
    <string name="errcode_unknown">返回</string>

</resources>
