<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    android:layout_height="match_parent">

    <include layout="@layout/common_toolbar"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dp15"
        android:layout_height="wrap_content">

        <EditText
            android:layout_marginTop="@dimen/dp15"
            android:id="@+id/oldPwd"
            style="@style/inputStyle"
            android:inputType="textPassword"
            android:hint="@string/oldPwd"/>

        <EditText
            android:layout_marginTop="@dimen/dp15"
            android:id="@+id/newPwd"
            style="@style/inputStyle"
            android:inputType="textPassword"
            android:hint="@string/newPwd"/>

        <EditText
            android:layout_marginTop="@dimen/dp15"
            android:id="@+id/againPwd"
            style="@style/inputStyle"
            android:inputType="textPassword"
            android:hint="@string/passwdAgain"/>

    </LinearLayout>








</LinearLayout>