<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    android:layout_height="match_parent">

    <include layout="@layout/common_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingLeft="@dimen/dp20"
        android:paddingRight="@dimen/dp20"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bg_shape"
            android:padding="@dimen/dp10"
            android:id="@+id/name"
            android:textColorHint="@color/hintColor"
            android:hint="@string/takeName"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bg_shape"
            android:padding="@dimen/dp10"
            android:id="@+id/mobile"
            android:textColorHint="@color/hintColor"
            android:layout_marginTop="@dimen/dp15"
            android:hint="@string/takeNameMobile"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bg_shape"
            android:padding="@dimen/dp10"
            android:id="@+id/address"
            android:textColorHint="@color/hintColor"
            android:layout_marginTop="@dimen/dp15"
            android:hint="@string/dateil_address"/>
   <!--     <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bg_shape"
            android:layout_marginTop="@dimen/dp15"
            android:id="@+id/idcard"
            android:padding="@dimen/dp10"
            android:textColorHint="@color/hintColor"
            android:hint="@string/idcard"/>-->


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/hook"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/dp15"
            android:text="@string/set_default_address"
            android:id="@+id/checkbox"
            android:paddingLeft="@dimen/dp5"
            />

        <com.tp.venus.widget.RippleView
            android:id="@+id/saveOrUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp30"
            android:text="@string/save"
            android:padding="@dimen/dp10"
            android:textSize="@dimen/sp17"
            android:gravity="center"
            android:textColor="@color/fontColor"
            android:background="@drawable/btn_bg_themecolor_shape"
            />

    </LinearLayout>
</LinearLayout>