<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    >

    <include layout="@layout/common_toolbar"/>


    <LinearLayout
        android:layout_below="@id/mToolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingLeft="@dimen/dp20"
        android:paddingRight="@dimen/dp20"
        android:background="@color/white"
        >

        <EditText
            android:id="@+id/mAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bg_shape"
            android:padding="@dimen/dp10"
            android:textColorHint="@color/hintColor"
            android:hint="@string/phone"/>


        <LinearLayout
            android:layout_marginTop="@dimen/dp15"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/mCode"
                android:padding="@dimen/dp10"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_bg_shape"
                android:textColorHint="@color/hintColor"
                android:hint="@string/code"/>


            <com.tp.venus.widget.RippleView
                android:layout_marginLeft="@dimen/dp15"
                android:padding="@dimen/dp10"
                android:gravity="center"
                android:background="@drawable/btn_bg_themecolor_shape"
                android:layout_width="@dimen/dp100"
                android:layout_height="@dimen/dp40"
                android:textColor="@color/fontColor"
                android:text="@string/getCode"
                android:textSize="@dimen/sp15"
                android:id="@+id/send_code"
                />
        </LinearLayout>
        <com.tp.venus.widget.RippleView
            android:id="@+id/mLoginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp15"
            android:text="@string/fast_login"
            android:padding="@dimen/dp10"
            android:textSize="@dimen/sp17"
            android:gravity="center"
            android:textColor="@color/fontColor"
            android:background="@drawable/btn_bg_themecolor_shape"
            />


        <RelativeLayout
            android:layout_marginTop="@dimen/dp10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/passwordLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_pwd_login"
                android:textSize="@dimen/sp12"
                android:textColor="@color/hintColor"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp60"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_height="wrap_content">
            <View
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="1dp"
                android:background="@color/grey"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fast_login_tip"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginRight="@dimen/dp10"
                />
            <View
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="1dp"
                android:background="@color/grey"
                />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fast_login_tip_info"
            android:textSize="@dimen/sp12"
            android:layout_marginTop="@dimen/dp10"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/dp20"
                android:id="@+id/wechat_login"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:src="@drawable/wechat"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_margin="@dimen/dp5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/wechat"
                    android:gravity="center_vertical"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/dp20"
                android:id="@+id/microblog_login"
                android:layout_alignParentBottom="true"
                >
                <ImageView
                android:layout_width="wrap_content"
                android:src="@drawable/weibo"
                android:layout_height="wrap_content" />
                <TextView
                    android:layout_margin="@dimen/dp5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/microblog"
                    android:gravity="center_vertical"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/dp20"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:id="@+id/qq_login"
                >
                <ImageView
                android:layout_width="wrap_content"
                android:src="@drawable/qq"
                android:layout_height="wrap_content" />
                <TextView
                    android:layout_margin="@dimen/dp5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/qq"
                    android:gravity="center_vertical"
                    />
            </LinearLayout>


        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>




